# pysrna

./: .gitignore  .project  .pydevproject  README.md  README.rst  pyproject.toml  requirements.txt  srna-pipeline.nf
R/: srna_qc.R
R/dsRNA_soaking/: dsRNA_soaking_timecourse.Rmd  dsRNA_soaking_timecourse_analysis.Rmd
R/hen1/: hen1_analysis.Rmd
dev/: analyze_test_mapper.Rmd  nextflow.config  pysrna_env_1.0.recipe  test_mapper.nf
docs/: srna_latest.pptx  ~$srna_latest.pptx
python/: main.py  pysrna.py  utils.py
