[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysrna"
version = "1.0.0"
authors = [
  { name="Niko Popitsch", email="niko.popitsch@univie.ac.at" },
]
description = "pysrna is a python based analysis pipeline for small RNA-seq data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/popitsch/pysrna"
"Bug Tracker" = "https://github.com/popitsch/pysrna/issues"

[tool.setuptools]
packages = ["pysrna"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
